- /bin/rm is the default for deleting directories (in the default config file)
- Removed redundant validation (re: intervals) in execution section
- Exit 1 if we basically finish ok, but with some minor errors
- Print PID in lockfile
- Added a few more comments, clarified some existing comments
- Made some minor updates to the man page

VERSION 1.1.4 (May 16 23:44 2004)
------------------------------------------------------------------------------
- (re)added the cmd_rm parameter. rmtree() can't delete some obscure files
  on some systems
- Added rm_rf() stub function to recursively remove things using either
  rmtree() or /bin/rm -rf, depending on the configuration.
- Added cp and rm detection to ./configure script
- Set LC_ALL locale variable to C in an attempt to fix rmtree() locale issue
- Added no_create_root option to rsnapshot
- Added utils/make_cvs_snapshot.sh utility script
- Added utils/sign_packages.sh utility script
- Added utils/rsnapshot_if_mounted.sh utility script
- Standardized comment headers in utils/ scripts
- Added DEBIAN/copyright file
- Fixed man page to say RSNAPSHOT instead of RSNAPSHOT-PROGRAM for the title

VERSION 1.1.3 (Apr 06 14:24 2004)
------------------------------------------------------------------------------
- Validating rsync_short_args, must be in format '-an', not '-a -n'
- Assembling @cmd_stack list one at a time, rather than using join()
- Added "don't panic" message in rotate_interval() at verbose >= 4
  when no filesystem actions get performed
- Fixed latent display bug in print_msg() (now that it's getting used)
- Fixed "cd //" display bug when running from root directory (removed extra /)

VERSION 1.1.2 (Mar 17 02:12 2004)
------------------------------------------------------------------------------
- Fixed slash formatting issue with non-ssh rsync protocol calls
- Fixed a slightly inconvenient permissions issue in rsnaptar
- Added support for arbitrary arguments to backup_script files
